:building_construction:Replaced cypress-file-upload with native cypress function (#168)+:bug:Fixed gap-text and gap-text-dropdown not supporting markdown line breaks (#169)

--- a/src/components/Question/Question.css
+++ b/src/components/Question/Question.css
@@ -18,10 +18,16 @@
 }
 
 /* Markdown lists */
+.question-form ul,
+.question-form ol {
+  white-space: normal;
+}
+
 .question-form ul li,
 .question-form ol li {
   font-weight: inherit;
   list-style-position: inside;
+  font-size: inherit;
 }
 
 /* Markdown tables*/
